kustomize/customers/deployment.yaml
# Copyright (c) 2022, Nadun De Silva. All Rights Reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#   http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: customers
  name: customers
spec:
  selector:
    matchLabels:
      component: customers
  template:
    metadata:
      labels:
        component: customers
    spec:
      containers:
      - image: nadunrds/samples-pet-store-customers
        name: customers-service
        ports:
        - containerPort: 8080
          name: rest-api
        resources:
          limits:
            cpu: "200m"
            memory: 0.5Gi
          requests:
            cpu: "100m"
            memory: 0.2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: customers-conf
