kustomize/customers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
  labels:
    component: customers
spec:
  ports:
  - name: rest-api
    port: 8080
    targetPort: rest-api
  selector:
    component: customers
